Spacing - fix tabs and metadata spacing

--- a/src/components/message-list/_message-list.scss
+++ b/src/components/message-list/_message-list.scss
@@ -12,7 +12,7 @@
   }
 
   &__subject {
-    margin: 0;
+    margin: 0 0 0.2rem;
   }
 
   &__metadata {
